--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,10 @@ Thumbs.db
 *.swp
 *.swo
 *~
-conversation
+conversation.env
+
+# Local environment configuration
+.env
+
+# Claude Code documentation (contains sensitive workflow info)
+CLAUDE.md
