Add ArgoCD ingress and ignore conversation logs
- Add ArgoCD ingress configuration with Let's Encrypt
- Ignore conversation/ directory from version control

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ conversation.env
 
 # Claude Code documentation (contains sensitive workflow info)
 CLAUDE.md
+
+# Conversation logs
+conversation/
