--- a/kubernetes/infrastructure/ingress-nginx/install.yaml
+++ b/kubernetes/infrastructure/ingress-nginx/install.yaml
@@ -493,7 +493,7 @@ spec:
             - NET_BIND_SERVICE
             drop:
             - ALL
-          readOnlyRootFilesystem: true
+          readOnlyRootFilesystem: false
           runAsNonRoot: true
           runAsUser: 101
           seccompProfile:
