Update ArgoCD to watch kubernetes/infrastructure in main repo
- Point ArgoCD Application to proxmox-k8s repo
- Watch kubernetes/infrastructure subdirectory
- One repo pushed to both GitHub and Gitea

--- a/kubernetes/infrastructure/argocd/infrastructure-app.yaml
+++ b/kubernetes/infrastructure/argocd/infrastructure-app.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: http://gitea-http.gitea.svc.cluster.local:3000/homelab/infrastructure.git
+    repoURL: http://gitea-http.gitea.svc.cluster.local:3000/homelab/proxmox-k8s.git
     targetRevision: main
-    path: infrastructure
+    path: kubernetes/infrastructure
   destination:
     server: https://kubernetes.default.svc
     namespace: default
