Fix Sealed Secrets image to use correct quay.io/bitnami-labs registry

--- a/kubernetes/infrastructure/sealed-secrets/sealed-secrets.yaml
+++ b/kubernetes/infrastructure/sealed-secrets/sealed-secrets.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccountName: sealed-secrets-controller
       containers:
       - name: sealed-secrets-controller
-        image: docker.io/bitnami/sealed-secrets-controller:v0.27.1
+        image: quay.io/bitnami-labs/sealed-secrets-controller:v0.27.1
         command:
         - controller
         ports:
