Use Docker Hub image for Sealed Secrets controller v0.32.2

--- a/kubernetes/infrastructure/sealed-secrets/sealed-secrets.yaml
+++ b/kubernetes/infrastructure/sealed-secrets/sealed-secrets.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccountName: sealed-secrets-controller
       containers:
       - name: sealed-secrets-controller
-        image: quay.io/bitnami-labs/sealed-secrets-controller:v0.32.2
+        image: docker.io/bitnami/sealed-secrets-controller:v0.32.2
         command:
         - controller
         ports:
