Add WebAuthn configuration to Authelia
- Enable WebAuthn/FIDO2 support for biometric authentication
- Configure display name, timeout, and user verification
- Fixes WebAuthn registration failures (was not configured)

Users can now register Face ID, Touch ID, or security keys as 2FA.

--- a/kubernetes/infrastructure/authelia/config.yaml
+++ b/kubernetes/infrastructure/authelia/config.yaml
@@ -21,6 +21,13 @@ data:
       period: 30
       skew: 1
 
+    webauthn:
+      disable: false
+      display_name: Homelab
+      attestation_conveyance_preference: indirect
+      user_verification: preferred
+      timeout: 60s
+
     authentication_backend:
       file:
         path: /config/users_database.yml
