Add WebAuthn relying party ID for mobile compatibility
- Set relying_party_id to home.mcztest.com
- Fixes WebAuthn failures on mobile browsers (Safari/Chrome)
- Mobile browsers require explicit relying party ID for domain validation

Laptop WebAuthn works, this fix enables phone/tablet support.

--- a/kubernetes/infrastructure/authelia/config.yaml
+++ b/kubernetes/infrastructure/authelia/config.yaml
@@ -27,6 +27,7 @@ data:
       attestation_conveyance_preference: indirect
       user_verification: preferred
       timeout: 60s
+      relying_party_id: home.mcztest.com
 
     authentication_backend:
       file:
