Fix Pi-hole IP address (192.168.68.3 -> 192.168.68.62)
- Found Pi-hole at 192.168.68.62 via nmap scan
- Previous IP (192.168.68.3) was not responding
- Pi-hole ingress should now work correctly

Fixes 502 Bad Gateway error on pihole.home.mcztest.com

--- a/kubernetes/local-devices/pihole-ingress.yaml
+++ b/kubernetes/local-devices/pihole-ingress.yaml
@@ -16,7 +16,7 @@ metadata:
   namespace: default
 subsets:
 - addresses:
-  - ip: 192.168.68.3  # Replace with your Pi-hole IP
+  - ip: 192.168.68.62  # Pi-hole IP
   ports:
   - port: 80
     protocol: TCP
