--- a/kubernetes/apps/grafana/kustomization.yaml
+++ b/kubernetes/apps/grafana/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: monitoring
 resources:
-  - ../prometheus/namespace.yaml
   - grafana-config.yaml
   - grafana-dashboards.yaml
   - grafana-pvc.yaml
