--- a/.gitea/workflows/build-app-registry.yaml
+++ b/.gitea/workflows/build-app-registry.yaml
@@ -17,9 +17,15 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+        env:
+          DOCKER_HOST: tcp://localhost:2375
 
       - name: Build and push
         uses: docker/build-push-action@v5
+        env:
+          DOCKER_HOST: tcp://localhost:2375
         with:
           context: ./kubernetes/apps/app-registry
           push: true
