--- a/.gitea/workflows/build-app-registry.yaml
+++ b/.gitea/workflows/build-app-registry.yaml
@@ -11,6 +11,10 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    container:
+      image: docker:latest
+      env:
+        DOCKER_HOST: tcp://localhost:2375
     steps:
       - name: Build and push image
         run: |
