--- a/.gitea/workflows/build-app-registry.yaml
+++ b/.gitea/workflows/build-app-registry.yaml
@@ -11,12 +11,18 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    container:
-      image: docker:latest
-      env:
-        DOCKER_HOST: tcp://localhost:2375
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Docker CLI
+        run: |
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
+
       - name: Build and push image
+        env:
+          DOCKER_HOST: tcp://localhost:2375
         run: |
           # Wait for Docker daemon to be ready
           echo "Waiting for Docker..."
