Configure act-runner with Docker host and trigger build
- Set docker_host in act-runner config to tcp://localhost:2375
- Use host network for spawned containers
- Update app-registry README to trigger workflow

--- a/kubernetes/infrastructure/gitea-actions/act-runner.yaml
+++ b/kubernetes/infrastructure/gitea-actions/act-runner.yaml
@@ -28,12 +28,12 @@ data:
       port: 0
       external_server: ""
     container:
-      network: ""
+      network: "host"
       privileged: false
       options: ""
       workdir_parent: ""
       valid_volumes: []
-      docker_host: ""
+      docker_host: "tcp://localhost:2375"
 ---
 apiVersion: v1
 kind: ServiceAccount
