Fix act-runner Docker socket sharing for DinD
- Share /var/run via emptyDir volume between DinD and runner containers
- Change DOCKER_HOST to unix:///var/run/docker.sock
- Install docker.io package in workflow for Docker CLI
- Remove TCP connection - use Unix socket instead

This allows workflow containers to access the DinD Docker daemon via
the shared Unix socket, fixing the 'Cannot connect to Docker daemon' issue.

--- a/.gitea/workflows/build-app-registry.yaml
+++ b/.gitea/workflows/build-app-registry.yaml
@@ -17,12 +17,9 @@ jobs:
 
       - name: Install Docker CLI
         run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh get-docker.sh
+          apt-get update && apt-get install -y docker.io
 
       - name: Build and push image
-        env:
-          DOCKER_HOST: tcp://localhost:2375
         run: |
           # Wait for Docker daemon to be ready
           echo "Waiting for Docker..."
