Configure registry with proper DNS and fix build pipeline
- Add DNS for registry.home.mcztest.com via Cloudflare
- Remove auth from registry ingress for Docker pulls
- Update app-registry deployment to use registry.home.mcztest.com
- Update Kaniko build job to push to DNS registry
- Delete broken nginx ingress webhook
- Add TLS skip for Kaniko until cert is ready

--- a/kubernetes/apps/app-registry/deployment.yaml
+++ b/kubernetes/apps/app-registry/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: app-registry
-        image: docker-registry.container-registry.svc.cluster.local:5000/homelab/app-registry:latest
+        image: registry.home.mcztest.com/homelab/app-registry:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
