--- a/.gitea/workflows/build-app-registry.yaml
+++ b/.gitea/workflows/build-app-registry.yaml
@@ -12,14 +12,16 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     container:
-      image: gcr.io/kaniko-project/executor:latest
-      options: --entrypoint ""
+      image: gcr.io/kaniko-project/executor:debug
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Build and push with Kaniko
         run: |
           /kaniko/executor \
-            --context=/workspace/kubernetes/apps/app-registry \
-            --dockerfile=/workspace/kubernetes/apps/app-registry/Dockerfile \
+            --context=$(pwd)/kubernetes/apps/app-registry \
+            --dockerfile=$(pwd)/kubernetes/apps/app-registry/Dockerfile \
             --destination=docker-registry.container-registry.svc.cluster.local:5000/homelab/app-registry:latest \
             --insecure \
             --skip-tls-verify
