--- a/kubernetes/apps/app-registry/deployment.yaml
+++ b/kubernetes/apps/app-registry/deployment.yaml
@@ -81,8 +81,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-cloudflare
-    nginx.ingress.kubernetes.io/auth-url: "https://auth.home.mcztest.com/api/verify"
-    nginx.ingress.kubernetes.io/auth-signin: "https://auth.home.mcztest.com?rd=$escaped_request_uri"
+    # Public API - no auth required for read-only endpoints
 spec:
   ingressClassName: nginx
   tls:
