Implement CI/CD with ArgoCD PreSync hooks
- Added ArgoCD hook annotations to build-job
- PreSync: Builds image before deployment
- BeforeHookCreation: Deletes old job before creating new one
- Removed Gitea Actions (unreliable act-runner)
- CI/CD Flow: Push to Git → ArgoCD detects → PreSync builds → Deploys

--- a/kubernetes/apps/app-registry/build-job.yaml
+++ b/kubernetes/apps/app-registry/build-job.yaml
@@ -3,6 +3,9 @@ kind: Job
 metadata:
   name: build-app-registry
   namespace: default
+  annotations:
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
 spec:
   template:
     spec:
