--- a/kubernetes/apps/app-registry/kustomization.yaml
+++ b/kubernetes/apps/app-registry/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
+  - build-job.yaml
   - deployment.yaml
 configMapGenerator:
   - name: app-registry-data
