Switch Grafana and Prometheus to Let's Encrypt certificates

--- a/kubernetes/apps/prometheus/prometheus-ingress.yaml
+++ b/kubernetes/apps/prometheus/prometheus-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus
   namespace: monitoring
   annotations:
-    cert-manager.io/cluster-issuer: homelab-ca-issuer
+    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
 spec:
   ingressClassName: nginx
   tls:
