--- a/kubernetes/apps/grafana/grafana-ingress.yaml
+++ b/kubernetes/apps/grafana/grafana-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana
   namespace: monitoring
   annotations:
-    cert-manager.io/cluster-issuer: homelab-ca-issuer
+    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
 spec:
   ingressClassName: nginx
   tls:
