--- a/deploy/kubernetes/overlays/agent-progress/values.yaml
+++ b/deploy/kubernetes/overlays/agent-progress/values.yaml
@@ -2,12 +2,9 @@
 # Using existing agent-progress-mcp image
 
 # Hajimari dashboard integration
+# Hajimari annotations disabled - apps defined in customApps instead
 hajimari:
-  enabled: true
-  icon: "mdi:robot"
-  appName: "Agent Progress"
-  group: "MCP Servers"
-  info: "Workflow tracking for AI agents"
+  enabled: false
 
 image:
   repository: registry.home.mcztest.com/agent-progress-mcp
