--- a/deploy/kubernetes/overlays/ncsoccer-scraper/values.yaml
+++ b/deploy/kubernetes/overlays/ncsoccer-scraper/values.yaml
@@ -1,13 +1,9 @@
 # Values for ncsoccer-scraper (ncsoccer-mcp)
 # Using existing ncsoccer-mcp image
 
-# Hajimari dashboard integration
+# Hajimari annotations disabled - apps defined in customApps instead
 hajimari:
-  enabled: true
-  icon: "mdi:soccer"
-  appName: "NC Soccer"
-  group: "MCP Servers"
-  info: "Soccer predictions and standings"
+  enabled: false
 
 image:
   repository: registry.home.mcztest.com/ncsoccer-mcp
